--- a/README
+++ b/README
@@ -1,3 +1,3 @@
 Using RandomForest (https://cran.r-project.org/web/packages/randomForest/) to detect blends.
 
-
+Using rfor conda environment on Perlmutter
